--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Europe -- Politics and government -- 1871-1918'
 - !lcc 'DG'
 - !lcsh 'Italy -- Foreign relations -- 1870-1914'
+- GITenberg
 title: 'Politica estera: memorie e documenti'
 url: http://www.gutenberg.org/ebooks/41821
